[gd_scene load_steps=34 format=3 uid="uid://32a3yc0kt30x"]

[ext_resource type="Script" path="res://Game/game.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bt85w7mnxdlb1" path="res://Menus/background.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://cmnpuu08bk5f6" path="res://Art/Banner.png" id="3"]
[ext_resource type="PackedScene" path="res://UI/expedition_counter.tscn" id="4"]
[ext_resource type="PackedScene" path="res://UI/deck_display_button.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://dvn3b3ocji568" path="res://Art/Tiny Pickaxe Art.png" id="6"]
[ext_resource type="Texture2D" uid="uid://c826tnrod6tjd" path="res://Art/ExpeditionText.png" id="7"]
[ext_resource type="PackedScene" path="res://UI/ore_collected.tscn" id="8"]
[ext_resource type="PackedScene" path="res://UI/energy_indicator.tscn" id="9"]
[ext_resource type="Script" path="res://Game/hand.gd" id="10"]
[ext_resource type="Curve" path="res://Resources/HandFanning.tres" id="11"]
[ext_resource type="Curve" path="res://Resources/HandFanning 2.tres" id="12"]
[ext_resource type="Curve" path="res://Resources/HandRotation.tres" id="13"]
[ext_resource type="Texture2D" uid="uid://bjdvsqjwnk585" path="res://Art/CardShadow.png" id="14"]
[ext_resource type="Script" path="res://Game/cards_played.gd" id="15"]
[ext_resource type="Texture2D" uid="uid://b65vo2uhbidi3" path="res://Art/End Turn Button Default.png" id="16"]
[ext_resource type="Texture2D" uid="uid://m0acl3tjid62" path="res://Art/End Turn Button Hover.png" id="17"]
[ext_resource type="Script" path="res://Game/end_turn.gd" id="18"]
[ext_resource type="Texture2D" uid="uid://dn8fvluegod80" path="res://Art/ExpeditionCompleteTextArt.png" id="19"]
[ext_resource type="Texture2D" uid="uid://c27hmaw05cls5" path="res://Art/LastExpeditionCompleteText.png" id="20"]
[ext_resource type="Texture2D" uid="uid://ce5cod5jaku8i" path="res://Art/GameOverTextArt.png" id="21"]
[ext_resource type="PackedScene" path="res://UI/score_progress_bar.tscn" id="22"]
[ext_resource type="PackedScene" path="res://UI/time_left_bar.tscn" id="23"]
[ext_resource type="PackedScene" path="res://UI/draw_pile.tscn" id="24"]
[ext_resource type="PackedScene" uid="uid://da770ns8s8rio" path="res://UI/discard_pile.tscn" id="25"]
[ext_resource type="PackedScene" path="res://UI/card_pile_display.tscn" id="26"]
[ext_resource type="Script" path="res://Game/Controls Display.gd" id="27"]
[ext_resource type="Texture2D" uid="uid://dkwqjrup2ogpg" path="res://Art/Score Requirement Reached.png" id="28"]
[ext_resource type="PackedScene" path="res://Menus/pause_menu.tscn" id="29"]

[sub_resource type="InputEventKey" id="InputEventKey_f5mto"]
device = -1
keycode = 69
unicode = 101

[sub_resource type="Shortcut" id="Shortcut_4lkxe"]
events = [SubResource("InputEventKey_f5mto")]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_namnw"]
load_path = "res://.godot/imported/End Turn Button Pressed.png-60de7c446744d235b8494f7f8613efba.ctex"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yg1pb"]

[node name="Game" type="Control" groups=["Game"]]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Background" parent="." instance=ExtResource("2")]
layout_mode = 1

[node name="Game Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Banner" type="TextureRect" parent="Game Container"]
z_index = 1
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3")

[node name="Expedition Counter" parent="Game Container/Banner" instance=ExtResource("4")]
offset_left = 24.0
offset_top = 12.0
offset_right = 24.0
offset_bottom = 12.0

[node name="DeckDisplayButton" parent="Game Container/Banner" instance=ExtResource("5")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -69.0
offset_right = 0.0
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(66, 57)

[node name="Pickaxe" type="TextureRect" parent="Game Container/Banner"]
layout_mode = 0
offset_left = 18.0
offset_top = 18.0
offset_right = 90.0
offset_bottom = 90.0
texture = ExtResource("6")

[node name="Text" type="TextureRect" parent="Game Container/Banner"]
visible = false
layout_mode = 0
offset_left = 102.0
offset_top = 12.0
offset_right = 522.0
offset_bottom = 96.0
texture = ExtResource("7")

[node name="OreCollected" parent="Game Container/Banner" instance=ExtResource("8")]
offset_left = 870.0
offset_top = 12.0
offset_right = 1050.0
offset_bottom = 84.0

[node name="Play Area" type="Control" parent="Game Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnergyIndicator" parent="Game Container/Play Area" instance=ExtResource("9")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -888.0
offset_top = -498.0
offset_right = -768.0
offset_bottom = -378.0
grow_horizontal = 2
grow_vertical = 0

[node name="Hand" type="Control" parent="Game Container/Play Area"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -312.0
offset_right = 600.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("10")
hand_curve = ExtResource("11")
hand_curve_2 = ExtResource("12")
rotation_curve = ExtResource("13")

[node name="Background" type="ColorRect" parent="Game Container/Play Area/Hand"]
visible = false
self_modulate = Color(1, 1, 1, 0.572549)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 48.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.054902, 0.0666667, 0.0627451, 1)

[node name="Slots" type="Control" parent="Game Container/Play Area/Hand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Game Container/Play Area/Hand"]
self_modulate = Color(1, 1, 1, 0.572549)
layout_mode = 0
offset_top = 48.0
offset_right = 1200.0
offset_bottom = 288.0
texture = ExtResource("14")
region_rect = Rect2(0, 0, 228, 336)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Cards Played" type="Control" parent="Game Container/Play Area"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -504.0
offset_top = -195.0
offset_right = 504.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("15")
hand_curve = ExtResource("11")
hand_curve_2 = ExtResource("12")
rotation_curve = ExtResource("13")

[node name="Background" type="ColorRect" parent="Game Container/Play Area/Cards Played"]
visible = false
self_modulate = Color(1, 1, 1, 0.572549)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.054902, 0.0666667, 0.0627451, 1)

[node name="Slots" type="Control" parent="Game Container/Play Area/Cards Played"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="End Turn" type="TextureButton" parent="Game Container/Play Area"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 720.0
offset_top = -486.0
offset_right = 936.0
offset_bottom = -378.0
grow_horizontal = 2
grow_vertical = 0
shortcut = SubResource("Shortcut_4lkxe")
texture_normal = ExtResource("16")
texture_pressed = SubResource("CompressedTexture2D_namnw")
texture_hover = ExtResource("17")
texture_disabled = SubResource("CompressedTexture2D_namnw")
script = ExtResource("18")

[node name="ExpeditionComplete" type="VBoxContainer" parent="Game Container/Play Area"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -426.0
offset_top = 58.5
offset_right = 426.0
offset_bottom = 301.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(426, 121)
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="Game Container/Play Area/ExpeditionComplete"]
layout_mode = 2
texture = ExtResource("19")
stretch_mode = 5

[node name="Go" type="Button" parent="Game Container/Play Area/ExpeditionComplete"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
theme_override_styles/focus = SubResource("StyleBoxEmpty_yg1pb")
text = "go >>"

[node name="LastExpeditionComplete" type="VBoxContainer" parent="Game Container/Play Area"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -708.0
offset_top = 58.5
offset_right = 708.0
offset_bottom = 301.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(708, 121)
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="Game Container/Play Area/LastExpeditionComplete"]
layout_mode = 2
texture = ExtResource("20")
stretch_mode = 5

[node name="Victory" type="Button" parent="Game Container/Play Area/LastExpeditionComplete"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
theme_override_styles/focus = SubResource("StyleBoxEmpty_yg1pb")
text = "victory >>"

[node name="Game Over Display" type="VBoxContainer" parent="Game Container/Play Area"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -473.5
offset_top = 58.5
offset_right = 473.5
offset_bottom = 327.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(473, 134)
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="Game Container/Play Area/Game Over Display"]
layout_mode = 2
texture = ExtResource("21")
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Game Container/Play Area/Game Over Display"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Main Menu" type="Button" parent="Game Container/Play Area/Game Over Display/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_yg1pb")
text = "<< main menu"

[node name="Start Over" type="Button" parent="Game Container/Play Area/Game Over Display/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_yg1pb")
text = "start over >>"

[node name="ScoreProgressBar" parent="Game Container/Play Area" instance=ExtResource("22")]
offset_left = 300.0
offset_top = 6.0
offset_right = 792.0
offset_bottom = 114.0

[node name="TimeLeftBar" parent="Game Container/Play Area" instance=ExtResource("23")]
offset_left = 1128.0
offset_top = 6.0
offset_right = 1620.0
offset_bottom = 114.0

[node name="Draw Pile" parent="Game Container/Play Area" instance=ExtResource("24")]
layout_mode = 1
offset_left = -912.0
offset_top = 123.0
offset_right = -744.0
offset_bottom = 453.0

[node name="Discard Pile" parent="Game Container/Play Area" instance=ExtResource("25")]
layout_mode = 1
offset_left = 744.0
offset_top = 135.0
offset_right = 912.0
offset_bottom = 453.0

[node name="Leave Early" type="Button" parent="Game Container/Play Area"]
visible = false
layout_mode = 0
offset_left = 1680.0
offset_top = 274.0
offset_right = 1896.0
offset_bottom = 384.0
text = "leave 
early >>"

[node name="CardPileDisplay" parent="." instance=ExtResource("26")]
visible = false
layout_mode = 1
offset_top = 128.0

[node name="Controls Display" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("27")

[node name="DrawPile" type="Label" parent="Controls Display"]
layout_mode = 0
offset_left = 228.0
offset_top = 822.0
offset_right = 348.0
offset_bottom = 895.0
theme_override_colors/font_color = Color(0.968627, 1, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.0666667, 0.0627451, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 72
text = "(a)"

[node name="DiscardPile" type="Label" parent="Controls Display"]
layout_mode = 0
offset_left = 1590.0
offset_top = 816.0
offset_right = 1710.0
offset_bottom = 889.0
theme_override_colors/font_color = Color(0.968627, 1, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.0666667, 0.0627451, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 72
text = "(s)"

[node name="End Turn" type="Label" parent="Controls Display"]
layout_mode = 0
offset_left = 1548.0
offset_top = 630.0
offset_right = 1668.0
offset_bottom = 703.0
theme_override_colors/font_color = Color(0.968627, 1, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.0666667, 0.0627451, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 72
text = "(e)"

[node name="Deck" type="Label" parent="Controls Display"]
z_index = 5
layout_mode = 0
offset_left = 1680.0
offset_top = 18.0
offset_right = 1800.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(0.968627, 1, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.0666667, 0.0627451, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 72
text = "(d)"

[node name="CardHalfHolder" type="CanvasLayer" parent="."]

[node name="CardHolder" type="CanvasLayer" parent="."]

[node name="Debug Layer" type="CanvasLayer" parent="."]

[node name="Particle Folder" type="Node2D" parent="."]

[node name="Particle Folder CV" type="CanvasLayer" parent="."]

[node name="Score Requirement" type="CanvasLayer" parent="."]

[node name="Score Requirement Notification" type="TextureRect" parent="Score Requirement"]
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -564.0
offset_top = -216.0
offset_right = 564.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(564, 69)
texture = ExtResource("28")
stretch_mode = 2

[node name="Pause Menu" parent="." instance=ExtResource("29")]
visible = false

[connection signal="mouse_entered" from="Game Container/Play Area/End Turn" to="Game Container/Play Area/End Turn" method="_on_mouse_entered"]
[connection signal="pressed" from="Game Container/Play Area/End Turn" to="Game Container/Play Area/End Turn" method="_on_pressed"]
[connection signal="mouse_entered" from="Game Container/Play Area/ExpeditionComplete/Go" to="." method="_on_go_mouse_entered"]
[connection signal="pressed" from="Game Container/Play Area/ExpeditionComplete/Go" to="." method="_on_go_pressed"]
[connection signal="mouse_entered" from="Game Container/Play Area/LastExpeditionComplete/Victory" to="." method="_on_victory_mouse_entered"]
[connection signal="pressed" from="Game Container/Play Area/LastExpeditionComplete/Victory" to="." method="_on_victory_pressed"]
[connection signal="mouse_entered" from="Game Container/Play Area/Game Over Display/HBoxContainer/Main Menu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="Game Container/Play Area/Game Over Display/HBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="mouse_entered" from="Game Container/Play Area/Game Over Display/HBoxContainer/Start Over" to="." method="_on_start_over_mouse_entered"]
[connection signal="pressed" from="Game Container/Play Area/Game Over Display/HBoxContainer/Start Over" to="." method="_on_start_over_pressed"]
[connection signal="mouse_entered" from="Game Container/Play Area/Leave Early" to="." method="_on_leave_early_mouse_entered"]
[connection signal="pressed" from="Game Container/Play Area/Leave Early" to="." method="_on_leave_early_pressed"]
